# musicPlayer

./: .gitignore  App.tsx  BACKGROUND_GUIDE.md  DYNAMIC_BACKGROUNDS_STRATEGY.md  README.md  capacitor.config.ts  index.css  index.html  metadata.json  music_v2.html  music_v4.html  music_v6.html  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
.github/workflows/: deploy.yml
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
components/: DynamicBackground.tsx  PlayerControls.tsx  QueueList.tsx  SettingsPanel.tsx  Visualizer.tsx
components/effects/: AuroraBackground.tsx  FloatingCircles.tsx  ParticlesBackground.tsx
continous/: App.tsx  README.md  musicPlayer.html  package.json
continous/components/: PlayerControls.tsx  QueueList.tsx  SettingsPanel.tsx
continous/utils/: audioHelpers.ts
docs/: DYNAMIC_BACKGROUND_TEMPLATE.md
experimental/: index.html  music_v7.html  package-lock.json  package.json
experimental/continous/: metadata.json  package.json  types.ts
experimental/releases/: README.md
experimental/src/: App.tsx  index.css
experimental/src-tauri/: Cargo.toml  tauri.conf.json
experimental/src-tauri/icons/: icon.icns
experimental/src-tauri/src/: main.rs
onePage/: music_v1.html  music_v3.html  music_v5.html
src/: App.tsx  types.ts
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: DynamicBackground.tsx  PlayerControls.tsx  QueueList.tsx  SettingsPanel.tsx  Visualizer.tsx
utils/: androidBridge.ts  audioHelpers.ts
(+15 files in other folders)
